# usync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HACKERNEWS_POST.md  LICENSE  README.md  SECURITY.md  env.example  flake.nix  shell.nix
.github/workflows/: auto-approve.yml  ci.yml  pipeline.yml  release.yml  security.yml  version-bump.yml
comparisons/: README.md  bench.sh
src/: copy.rs  lib.rs  main.rs  path.rs  protocol.rs  remote.rs  utils.rs
src/backend/: error.rs  factory.rs  local.rs  mod.rs  traits.rs
src/backend/cli/: http.rs  mod.rs  s3.rs  ssh.rs
src/filters/: date.rs  mod.rs  pattern.rs  size.rs
src/operations/: copy.rs  list.rs  mod.rs  sync.rs
test/input/large/1/: file_10.txt  file_2.txt
test/input/large/2/: file_4.txt  file_5.txt  file_6.txt
test/input/large/3/: file_4.txt
test/input/large/4/: file_6.txt
test/input/large/5/: file_2.txt  file_6.txt  file_9.txt
test/output/input_copy/large/1/: file_6.txt  file_7.txt
test/output/input_copy/large/3/: file_1.txt  file_2.txt
test/output/input_copy/large/4/: file_10.txt  (+1 more)
tests/: README.md  S3_TESTING.md  additional_tests.sh  checksum_utils.sh  comprehensive_test_suite.sh  docker-compose.minio-test.yml  integration_tests.rs  s3_setup.sh  s3_tests.sh  setup_test_files.sh  test_runner.sh  unit_tests.rs
tests/input/large/1/: file_9.txt
tests/input/large/2/: file_3.txt  file_8.txt
tests/input/large/4/: file_2.txt  file_3.txt  file_7.txt
tests/input/large/5/: file_1.txt  file_4.txt  file_5.txt
tests/output/input_copy/: file with spaces.txt
tests/output/subdir_short/: file3.txt
(+25 files in other folders)
