[package]
name = "usync"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ssh2 = { version = "0.9", optional = true }
url = "2.5"
tempfile = "3.10"
indicatif = { version = "0.17", optional = true }
colored = { version = "2.1", optional = true }
rayon = { version = "1.8", optional = true }
[features]
default = []
progress = ["indicatif"]
color = ["colored"]
ssh-rust = ["ssh2"]
parallel = ["rayon"]

[dev-dependencies]
tempfile = "3.10"
